# Rag_Production_fcc

./: .gitignore  pyproject.toml
ingestion/embedding/: embedding.py
ingestion/retriver/: prod_hybrid_search.py
ingestion/text_splitter/: text_splitter.py
loader/pdf_loader/: pdf_loader.py
loader/text_loader/: text_loader.py
rag_pipeline/: chroma.sqlite3  rag.py
vector_db/chroma_db/: app.py  vector_store.py
