[project]
name = "prod"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "icecream>=2.2.0",
    "langchain>=1.3.2",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "pymupdf>=1.27.2.3",
    "rank-bm25>=0.2.2",
    "rich>=15.0.0",
]
